# Memori

./: .gitignore  .gitmodules  .harper-dictionary.txt  README.md  dump.txt  flake.nix  justfile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4r1gf715gv6jqh3xv6y7mc2n48w3iidw-source  db6mn8nx8ywdw540vc89dyggy9358wqn-source  g1rkrcba88bmgmjc2lrnwcala1w2yblq-source  s1ra3mlx2r37qxrm8w9438a3gwaws1mg-source  w664m7pw7y2rvwsxlyhrc45a1fxpkj2x-source  xsi1fvivhj7qcaba4abvczjaxn23284c-source
.helix/: ignore  languages.toml
.zed/: settings.json
changelogs/: changelog_02_19_refactor.md  changelog_refactor.md
doc/: team-working-agreement.typ
doc/release-summary/: release-summary.typ
doc/releaseplan/: pasted.md  releaseplan.typ
doc/sprint1/: sprint1plan.typ  sprint1report.typ
doc/sprint2/: sprint2plan.typ  sprint2report.typ
doc/sprint3/: sprint3plan.typ  sprint3report.typ
doc/sprint4/: sprint4plan.typ  sprint4report.typ
doc/testplan/: testplan.typ
memori-app/: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  GUIDE.md  bindings.ts  biome.jsonc  dprint.json  env.txt  justfile  lefthook.yml  naming-conventions.md  package.json  svelte.config.js  theme.md  tsconfig.json  vite.config.js
memori-app/src/: app.css  app.d.ts
memori-app/src-tauri/: Cargo.toml  oauth_config.json  tauri.conf.json
memori-app/src-tauri/capabilities/: default.json  mobile.json  svelte.json
memori-app/src-tauri/src/: auth_store_types.rs  ble.rs  lib.rs  main.rs  oauth.rs  oauth2.rs  simulator.rs  state.rs
memori-app/src-tauri/src/commands/: bus.rs  connection.rs  data.rs  fetch.rs  github.rs  mod.rs  translation_structs.rs  twitch.rs  weather.rs
memori-app/src-tauri/src/widget_data/: bus.rs  bus_data.rs  clock_data.rs  github.rs  github_data.rs  mod.rs  twitch.rs  twitch_data.rs  weather.rs  weather_data.rs
memori-app/src/lib/: bindings.ts  index.ts  utils.ts  widget-utils.ts
memori-app/src/lib/components/layout/: Droppable.svelte  SortableItem.svelte  WidgetEditor.svelte  WidgetSection.svelte  WidgetsDragOverlay.svelte  WidgetsEditorFrame.svelte  (+6 more)
memori-app/src/lib/model/: widget-dnd.ts  widget-frame.ts  widget-frame.types.ts
memori-app/src/lib/services/: app-service.ts  auth-service.ts  auth.ts  location-service.ts
memori-app/src/lib/stores/: app-store.ts  auth-store.ts  ble.svelte.ts
memori-app/src/lib/tauri/: bindings.ts  geolocation.ts  index.ts  ipc.ts
memori-app/src/routes/: +layout.svelte  +page.svelte  Step.svelte  back.svelte
memori-app/src/routes/ble/: +page.svelte  ble-page-model.svelte.ts  ble-utils.ts  ble-uuids.ts
memori-app/src/routes/device/: +page.svelte
memori-app/src/routes/edit/: +page.svelte  WidgetDrawer.svelte  WidgetItem.svelte  WidgetLayoutFrame.svelte  WidgetLayoutSlot.svelte  widget-utils.ts
memori-app/src/routes/edit-example/: +page.svelte  task-item.svelte
memori-app/src/routes/editor/: +page.svelte
memori-app/src/routes/frames/: +page.svelte  Droppable.svelte  SortableItem.svelte  sortable-item-classes.ts
memori-app/src/routes/layout/: +page.svelte  SortableItem.svelte
memori-app/src/routes/location/: +page.svelte
memori-app/src/routes/login/: +page.svelte
memori-app/src/routes/onboarding/: +page.svelte  step-frame-classes.ts
memori-app/src/routes/settings/: +page.svelte
memori-app/src/routes/single-list/: +page.svelte  droppable.svelte  sortable-item-classes.ts  sortable-item.svelte
memori-app/src/routes/test/: +page.svelte  SortableItem.svelte  task-column.svelte  task-item.svelte
memori-app/src/routes/testing/: +page.svelte
memori-app/src/routes/widgets/: +page.svelte  Droppable.svelte  sortable-item-classes.ts
memori-dev/: Cargo.toml  tree.txt
memori-dev/esp32c3/: Cargo.toml
memori-dev/esp32c3/src/: lib.rs
memori-dev/memori/: Cargo.toml
memori-dev/memori-core/: Cargo.toml
memori-dev/memori-esp32c3/: Cargo.toml  build.rs
memori-dev/memori-esp32c3/src/: ble.rs  lib.rs  local_widget_update.rs  widget_update.rs
memori-dev/memori-esp32c3/src/ble/: host_handler.rs  mod.rs  sender.rs
memori-dev/memori/src/: clock.rs  lib.rs
memori-dev/simulator/: Cargo.toml
memori-dev/simulator/src/: main.rs
memori-dev/src/: lib.rs
memori-hw/: #auto_saved_files#  .gitignore  fp-info-cache  memori-hw.kicad_pcb  memori-hw.kicad_prl  memori-hw.kicad_pro  memori-hw.kicad_sch  memori-hw.step  ~memori-hw.sch.lck
memori-hw/Gerbers/: memori-hw-B_Mask.gbr  memori-hw-B_Paste.gbr  memori-hw-B_Silkscreen.gbr  memori-hw-Back.gbr  memori-hw-Edge_Cuts.gbr  memori-hw-F_Mask.gbr  memori-hw-F_Paste.gbr  memori-hw-F_Silkscreen.gbr  memori-hw-Front.gbr  memori-hw-In1_Cu.gbr  memori-hw-In2_Cu.gbr  memori-hw-NPTH.drl  memori-hw-PTH.drl
memori-hw/steps/Adafruit part 258 - Lithium Ion Polymer Battery - 3.7v 1200mAh - 1306312/: LICENSE.txt  README.txt
memori-hw/steps/Adafruit part 258 - Lithium Ion Polymer Battery - 3.7v 1200mAh - 1306312/files/: battery_lipoly_258.stl
memori-sim/: Cargo.toml
memori-transport/: Cargo.toml
memori-transport/ble-device/: Cargo.toml
memori-transport/ble-device/src/: lib.rs
memori-transport/ble-host/: Cargo.toml
memori-transport/ble-host/examples/: host.rs
memori-transport/ble-host/src/: lib.rs
memori-transport/memori-tcp/: Cargo.toml
memori-transport/memori-tcp/src/: device.rs  host.rs  lib.rs
memori-transport/memori-tcp/tests/: basic.rs
memori-transport/src/: lib.rs
memori-transport/src/websocket/: mod.rs
memori-transport/transport/: Cargo.toml
memori-transport/transport/src/: ble_types.rs  lib.rs
memori-transport/websocket/: Cargo.toml
memori-transport/websocket/src/: device.rs  host.rs  lib.rs
memori-transport/websocket/websocket-device/: Cargo.toml
memori-transport/websocket/websocket-host/: Cargo.toml
memori-ui/: .harper-dictionary.txt  Cargo.toml
memori-ui/src/: clock.rs  layout.rs  lib.rs  name.rs  state.rs
memori-ui/src/widgets/: bus.rs  clock.rs  github.rs  mod.rs  name.rs  pair.rs  twitch.rs  weather.rs
three/: Scene.svelte  index.ts
(+415 files in other folders)
