[package]
name = "memori-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", optional = true}
heapless = { version = "0.9.2", features = ["serde"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = {version = "1.0.228", default-features = false}



[features]
default = ["std"]
std = ["serde/std"]
websocket = ["dep:axum", "std"]
ble = []





