[package]
name = "memori-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "memori_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

tauri-plugin-opener = "2"
tauri-plugin-tracing = "0.3.2"
tauri-plugin-store = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-blec = "0.8.1"
tauri-plugin-svelte = "3.1.0"
tauri-plugin-log = "2"

tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
transport = { path = "../../memori-transport/transport" }
memori-ui = { path = "../../memori-ui" }
memori-tcp = { path = "../../memori-transport/memori-tcp" }
ble-host = { path = "../../memori-transport/ble-host" }
