[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.8.0"
profont = "0.7.0"

ratatui = { version = "0.30.0" ,default-features = false, features=["portable-atomic"] }
mousefood = { git="https://github.com/j-g00da/mousefood.git", rev="693d82ae9482c32be6363e72474faeb7d962cb1b", features = ["epd-weact","framebuffer"] }

memori-ui = {path="../../memori-ui"}
transport = {path="../../memori-transport/transport"}
memori-tcp = {path="../../memori-transport/memori-tcp"}
tokio = { version = "1.49.0", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
