[package]
name = "ble-device"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
log = "0.4.29"
portable-atomic = { version = "1.13.1", features = ["fallback"] }
postcard = "1.1.3"
static_cell = "2.1.1"
transport = {path="../transport"}
trouble-host = "0.5.1"
