[package]
name = "ble-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
btleplug = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
postcard = "1.1.3"
tokio = "1.49.0"
# tokio = { version = "1.44.2", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
transport = {path="../transport"}
uuid = "1.20.0"

[dev-dependencies]
async-trait = "0.1.89"
rand = "0.9.2"
tokio = { version = "1.44.2", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = "1.19.0"
io = "0.0.2"
log = "0.4.29"

[[example]]
name = "host"
